--- a/style.css
+++ b/style.css
@@ -511,3 +511,197 @@ body.menu-open {
 * {
     transition: all 0.3s ease;
 }
+@media (max-width: 1024px) {
+    .container {
+        padding: 10px;
+    }
+
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .nav-links {
+        gap: 20px;
+        margin-right: 0;
+        flex-wrap: wrap;
+    }
+
+    .card {
+        flex-direction: column;
+        gap: 40px;
+        align-items: center;
+    }
+
+    .text-box {
+        width: 90%;
+        margin-left: 0;
+    }
+
+    .photo {
+        width: 90%;
+        text-align: center;
+    }
+
+    .vector {
+        display: none;
+    }
+
+    .sqs {
+        flex-direction: row;
+        justify-content: center;
+        margin: 50px auto 0 auto;
+    }
+
+    .vector2 {
+        display: none;
+    }
+
+    .small {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .socialbox {
+        margin-left: 0;
+        justify-content: center;
+    }
+
+    .textt {
+        margin-left: 0;
+        text-align: center;
+    }
+
+    .contacts {
+        position: static;
+        margin-top: 30px;
+        text-align: center;
+    }
+
+    .hc,
+    .hc-1 {
+        position: static;
+        left: auto;
+        bottom: auto;
+        margin: 10px auto;
+    }
+}
+
+
+
+@media (max-width: 768px) {
+    .logo {
+        font-size: 24px;
+    }
+
+    .nav-links a {
+        font-size: 18px;
+    }
+
+    .btnlang {
+        font-size: 18px;
+        padding: 5px 10px;
+    }
+
+    .card {
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    .photo img {
+        width: 100%;
+    }
+
+    .photo {
+        width: 90%;
+        padding: 10px;
+    }
+
+    .title {
+        font-size: 28px;
+    }
+
+    .description {
+        font-size: 16px;
+    }
+
+    .btn {
+        font-size: 16px;
+        padding: 8px 16px;
+    }
+
+    .title2 {
+        font-size: 28px;
+        text-align: center;
+    }
+
+    .small {
+        font-size: 18px;
+    }
+
+    .sqs {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .social-media {
+        padding: 50px 20px;
+        margin: 0 -20px;
+    }
+
+    .textt {
+        font-size: 20px;
+    }
+
+    .nav-links2 {
+        width: 80%;
+    }
+
+    .nav-links2 a {
+        font-size: 18px;
+    }
+    header {
+        flex-direction: column;
+        align-items: center;
+    }
+       .nav-links {
+        display: none;
+    }
+      .logo {
+        text-align: center;
+        width: 100%;
+        font-size: 28px;
+    }
+        .btnlang {
+        margin: 10px 20px;
+        display: block;
+
+    }
+    .nav-links2 {
+        width: 100%;
+        right: -100%;
+    }
+
+    .nav-links2.active {
+        right: 0;
+    }
+    .hair,
+    .sq {
+        display: none;
+    }
+    .title2{
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    .small {
+        text-align: center;
+    }
+    .textt {
+        margin-top: 10px;
+    
+    }
+    .socialbox {
+        text-align: center;
+    }
+}
